--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     "require": {
         "jenssegers/agent": "^2.6"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Novaday\\Debugher\\\\DebugherServiceProvider"
+            ]
+        }
+    }
 }
