--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Novaday\\Debugher\\DebugherServiceProvider"
+                "Novaday\\Debugher\\DebugherServiceProvider",
+                "Novaday\\Debugher\\Providers\\EventServiceProvider"
             ]
         }
     }
